Actions
Bug #10083
closedsmatch fixes for common/fs/vfs.c
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Fix a couple of minor smatch-identified issues.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit d6294894f9d15dfb12a0dd3a6acf8bd4a4a65408
commit d6294894f9d15dfb12a0dd3a6acf8bd4a4a65408 Author: John Levon <john.levon@joyent.com> Date: 2019-01-17T16:04:05.000Z 10083 smatch fixes for common/fs/vfs.c Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions