10083 smatch fixes for common/fs/vfs.c Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@joyent.com>